--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ img {
 .header-container {
   display: flex;
 }
-
+.here
 .header-logo-link link {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -99,13 +99,12 @@ img {
   text-decoration: none;
 }
 
-.header-link-item:nth-child(1) a {
+.carend{
   position: relative;
   color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link-item:nth-child(1) a::after {
+.carend::after {
   content: "";
   position: absolute;
   left: 0;
@@ -114,6 +113,13 @@ img {
   background-color: #404bbf;
   border-radius: 2px;
 }
+.link-menu
+
+.header-link-item:nth-child(1) a {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
 
 /*------------addres meny-----------------*/
 
@@ -269,6 +275,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: 0 auto;
 }
 
 .here-title {
@@ -280,7 +287,6 @@ img {
   max-width: 496px;
   margin: 0 auto;
   margin-bottom: 48px;
-  margin: 0 auto;
 }
 
 .here-btn {
@@ -296,6 +302,7 @@ img {
   display: block;
   min-width: 169px;
   height: 56px;
+  border:none;
   border-radius: 4px;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -548,7 +555,6 @@ img {
 
 .footer-logo-text {
   margin-right: 120px;
-  padding-left: 120px;
 }
 
 .footer {
@@ -646,8 +652,6 @@ img {
 }
 
 .social-media-icon {
-  width: 24px;
-  height: 24px;
   fill: #f4f4fd;
 }
 
@@ -656,7 +660,6 @@ img {
   background-color: #31d0aa;
 }
 
-.social-media-icon:hover,
 .social-media-icon:focus {
   background-color: #4d5ae5;
 }
